--- a/app/css/pages/home/about-us.scss
+++ b/app/css/pages/home/about-us.scss
@@ -44,7 +44,7 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    transform: translate(-10%, 10%);
+    transform: translate(-5%, 10%);
     text-transform: uppercase;
     display: inline-flex;
 
