--- a/app/css/pages/home/services-jobs.scss
+++ b/app/css/pages/home/services-jobs.scss
@@ -1,6 +1,7 @@
 .services-jobs {
   padding-top: 120px;
   background: #FFFFFF;
+  overflow: hidden;
 
   &__heading {
     display: block;
